test/pass/variance/assign_covariance.lly
class One {}
class Two < One {}

var v = One::new()
v = Two::new()

var v2 = [v]
v2[0] = Two::new()
